--- a/.github/workflows/deploy-to-ec2.yml
+++ b/.github/workflows/deploy-to-ec2.yml
@@ -37,20 +37,20 @@ jobs:
         push: true
         tags: ${{secrets.DOCKER_USERNAME}}/gpass-backend:latest
 
-  deploy-to-ec2:
-    runs-on: ubuntu-latest
-    needs: build-and-push-image
-    steps:
-    - name: SSH into EC2 Instance and pull Docker Image
-      uses: appleboy/ssh-action@v1.0.0
-      with:
-        host: ${{ secrets.EC2_HOST }}
-        username: ${{ secrets.EC2_USERNAME }}
-        key: ${{ secrets.EC2_SSH_KEY }}
-        script: |
-          cd ${{ secrets.EC2_APP_PATH }}/GPASS
-          git pull
-          docker-compose pull
-          docker-compose down
-          docker-compose up -d
-          docker-compose ps
+  # deploy-to-ec2:
+  #   runs-on: ubuntu-latest
+  #   needs: build-and-push-image
+  #   steps:
+  #   - name: SSH into EC2 Instance and pull Docker Image
+  #     uses: appleboy/ssh-action@v1.0.0
+  #     with:
+  #       host: ${{ secrets.EC2_HOST }}
+  #       username: ${{ secrets.EC2_USERNAME }}
+  #       key: ${{ secrets.EC2_SSH_KEY }}
+  #       script: |
+  #         cd ${{ secrets.EC2_APP_PATH }}/GPASS
+  #         git pull
+  #         docker-compose pull
+  #         docker-compose down
+  #         docker-compose up -d
+  #         docker-compose ps
