--- a/.github/workflows/deploy-to-ec2.yml
+++ b/.github/workflows/deploy-to-ec2.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Build and push Docker frontend image
       uses: docker/build-push-action@v2
       with:
-        context: ./backend
+        context: ./frontend
         push: true
         tags: ${{secrets.DOCKER_USERNAME}}/gpass-frontend:latest
 
