--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,6 +4,9 @@ FROM node:18.16.1
 # 设置容器内的工作目录
 WORKDIR /app/backend
 
+# 在工作目录下创建 logs 文件夹
+RUN mkdir logs
+
 # 将依赖文件复制到工作目录
 COPY package*.json ./
 
@@ -15,6 +18,9 @@ COPY . .
 
 # 暴露容器的端口
 EXPOSE 5000
+
+# 设置 logs 文件夹为容器内的工作目录
+WORKDIR /app/backend/logs
 
 # 运行应用
 CMD node app.js
