feat(exam) get, upload exams api

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     image: adeliu42/gpass-backend:latest
     ports:
       - "5000:5000"
+    volumes:
+      - ./backend/logs:/app/logs
     env_file:
       - ./backend/.env
   nginx:
