--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
@@ -20,6 +21,8 @@
     "multer-s3": "^3.0.1",
     "mysql2": "^3.6.1",
     "nodemailer": "^6.9.7",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "redis": "^4.6.11",
     "yaml": "^2.3.3"
   },
