--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
+    "axios": "^1.6.2",
     "formik": "^2.4.5",
+    "framer-motion": "^10.16.14",
     "next": "14.0.3",
+    "nookies": "^2.5.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sweetalert2": "^11.10.1",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@types/node": "^20",
