--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
     "axios": "^1.6.2",
+    "date-fns": "^2.30.0",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.14",
     "next": "14.0.3",
