--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "@uiw/react-markdown-preview": "^5.0.3",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "formik": "^2.4.5",
@@ -18,6 +19,15 @@
     "nookies": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
+    "rehype-katex": "^7.0.0",
+    "rehype-mathjax": "^5.0.0",
+    "rehype-raw": "^7.0.0",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.0",
+    "remark-html": "^16.0.1",
+    "remark-math": "^6.0.0",
+    "remark-rehype": "^11.0.0",
     "sweetalert2": "^11.10.1",
     "swr": "^2.2.4"
   },
