--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -17,10 +17,6 @@ server {
       proxy_pass http://client;
   }
 
-  location /images/ {
-        alias /app/public/images/;
-  }
-
   location /api/ {
       proxy_pass http://api/api/;
 
@@ -38,9 +34,9 @@ server {
      }
   }
 
-  location /admin {
+  location /auth {
       rewrite /api/(.*) /$1 break;
-      proxy_pass http://api/admin;
+      proxy_pass http://api/auth;
   }
   
   location /healthcheck {
