--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,14 +10,16 @@ services:
       - "5000:5000"
     volumes:
       - ./backend/logs:/app/logs
-    env_file:
-      - ./backend/.env
+    # env_file:
+    #   - ./backend/.env
   nginx:
     image: nginx
     ports:
       - "80:80"
+      - "443:443"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - /etc/letsencrypt:/etc/letsencrypt
     depends_on:
       - frontend
       - backend
