--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,5 +21,5 @@ services:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - /etc/letsencrypt:/etc/letsencrypt
     depends_on:
-      - frontend
+      # - frontend
       - backend
