fix(deploy): nginx

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,6 @@
-upstream client {
-  server frontend:3000;
-}
+# upstream client {
+#   server frontend:3000;
+# }
 
 upstream api {
   server backend:5000;
@@ -14,7 +14,7 @@ server {
   }
   
   location / {
-      proxy_pass http://client;
+      proxy_pass http://api/;
   }
 
   location /api/ {
@@ -49,8 +49,5 @@ server {
       proxy_pass http://api/docs;
   }
   
-  location /login {
-      proxy_pass http://client/login;
-  }
 
 }
