fix(deploy):https

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,6 +8,7 @@ upstream api {
 
 server {
   listen 80;
+  server_name adeliu-stylish.store;
 
   location ~ /.well-known {
     allow all;
@@ -15,6 +16,10 @@ server {
   
   location / {
       proxy_pass http://api/;
+  }
+
+  location /images/ {
+        alias /app/public/images/;
   }
 
   location /api/ {
@@ -34,9 +39,9 @@ server {
      }
   }
 
-  location /auth {
+  location /auth/ {
       rewrite /api/(.*) /$1 break;
-      proxy_pass http://api/auth;
+      proxy_pass http://api/auth/;
   }
   
   location /healthcheck {
@@ -49,5 +54,28 @@ server {
       proxy_pass http://api/docs;
   }
   
+  location /login {
+      rewrite /api/(.*) /$1 break;
+      proxy_pass http://api/login;
+  }
+
+  listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/adeliu-stylish.store/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/adeliu-stylish.store/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+}
+
+server {
+    if ($host = adeliu-stylish.store) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    listen 80;
+    server_name adeliu-stylish.store;
+    return 404; # managed by Certbot
+
 
 }
