--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "formik": "^2.4.5",
     "framer-motion": "^10.16.14",
     "next": "14.0.3",
+    "next-auth": "^4.24.5",
     "nookies": "^2.5.2",
     "qs": "^6.11.2",
     "react": "^18",
